--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-instagram": "^1.0.0",
     "socket.io": "^4.7.5",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "twilio": "^5.2.3"
   },
   "devDependencies": {
